--- a/index.html
+++ b/index.html
@@ -7,29 +7,32 @@
 <body>
     <div class= "body">
         <div class= "h1-index">
-            <h1><b> Home</b> </h1>
+            <h1><b>Home</b></h1>
         </div>
-    <div class= "abt-link">
-        <a href = "about copy.html"><b>About the Beats</b></a>
-    </div>
-    <div class="index-img">
-        <img src ="https://www.powerplanetonline.com/cdnassets/beats_studio3_wireless_decade_collection_negro_rojo_01_l.jpg" alt= "beats headphones" target="_blank">
-    </div>
-    <div class="pros-cons">
-        <h2><u>Pros and Cons of Beats Headphones</u></h2>
-        <h3>Pros</h3>
-        <ul>
-            <li> Comfortable</li>
-            <li> Nice design</li>
-            <li> Brand label</li>
-        </ul>
-        <h3> Cons</h3>
-        <ul>
-            <li>Not very durable</li>
-            <li>Very expensive</li>
-            <li>Don't age well</li>
-        </ul>
-    </div>
+        <div class="start">
+            <div class= "abt-link">
+                 <a href = "about.html"><b>About the Beats</b></a>
+            </div>
+            <div class="index-img">
+                <img src ="indeximg.png" alt= "beats headphones">
+            </div>
+        </div>
+        <div class="pros-cons">
+            <h2><u>Pros and Cons of Beats Headphones</u></h2>
+            <h3>Pros</h3>
+            <ul>
+                <li> Comfortable</li>
+                <li> Nice design</li>
+                <li> Brand label</li>
+            </ul>
+            <h3> Cons</h3>
+            <ul>
+                <li>Not very durable</li>
+                <li>Very expensive</li>
+                <li>Don't age well</li>
+            </ul>
+        </div>
+        <img src="proimg.png" alt="pros and cons" class="pros-img">
     </div>
 </body>
 </html>
